chore: capture gc logs and remove platform config overrides (#25713)
Signed-off-by: Petar Tonev <petar.tonev@limechain.tech>